# OpenGL_MacOS

./: CMakeLists.txt  README.md
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
dependencies/GLFW/docs/html/: quick_guide.html
res/shaders/: Basic.shader
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/tests/: Test.h  TestClearColor.cpp  TestClearColor.h
